tests/expectations/parser/unreachable/eat_ident.out
Error [EPAR0370005]: expected 'import', 'program' -- found 'struct'
    --> test:1:1
     |
   1 | struct import
     | ^^^^^^
